--- a/APIGateway/APIGateway.csproj
+++ b/APIGateway/APIGateway.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Ocelot" Version="23.2.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\JwtAuthenticationManager\JwtAuthenticationManager.csproj" />
+    </ItemGroup>
+
 </Project>
