--- a/Identity.Microservice/appsettings.json
+++ b/Identity.Microservice/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "host=localhost;port=5432;username=postgres;password=12345;database=identity_database"
+  },
   "AllowedHosts": "*"
 }
