--- a/Identity.Microservice/appsettings.json
+++ b/Identity.Microservice/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "defaultConnection": "host=localhost;port=5432;username=postgres;password=12345;database=identity_database"
+    "defaultConnection": "host=azure-mau-postgre.postgres.database.azure.com;port=5432;username=mau;password=Li@nel2022;database=identity_database"
   },
   "AllowedHosts": "*"
 }
